# wars-rs

./: Cargo.toml
data/maps/: a-forest-for-eight.json  crosshair.json  natural-enemies.json  pentagon.json  third_party.json  u-turn.json
src/: lib.rs  protocol.rs  util.rs
src/auth/: mod.rs
src/bins/: print_map.rs  print_units.rs  wars_tui.rs
src/game/: action.rs  game.rs  map.rs  mod.rs  tile.rs  unit.rs
src/model/: mod.rs  model.rs  model_old.rs
wars-bevy/: Cargo.toml  index.html  index.scss
wars-bevy/assets/: settings.json
wars-bevy/assets/maps/: divide-and-conquer.json  guard-duty.json  hexed.json  imported.json  my-awesome-map.json  open-warfare.json  waterworld.json
wars-bevy/src/: animation.rs  bevy_nfws.rs  bot.rs  camera.rs  components.rs  connection.rs  game_state.rs  interaction_state.rs  main.rs  main_menu_state.rs  map.rs  resources.rs  theme.rs  ui.rs
wars-server/: Cargo.toml
wars-server/migrations/: 20250803161917_init.down.sql  20250803161917_init.up.sql
wars-server/src/: main.rs  model.rs  state.rs
