[package]
name = "wars"
version = "0.1.0"
authors = ["Teemu Erkkola <teemu.erkkola@iki.fi>"]
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
enum-iterator = "2.1.0"

[[bin]]
name = "print_map"
path = "src/bins/print_map.rs"

[[bin]]
name = "print_units"
path = "src/bins/print_units.rs"
